roboshop docker files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,16 @@ services:
     - catalogue
 
   redis:
+
+
+  user:
+    image: user:1
+    depends_on:
+    - redis
+    - mongodb
+
+  cart:
+    image: cart:1
+    depends_on:
+    - redis
+    - catalogue
