new docker files

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,19 +6,19 @@ services:
 #docker run -d --name mongodb --network=roboshop mongodb:1
   mongodb:
     container_name: mongodb
-    image: mongodb:1
+    image: mongodb:v1
     # networks:
       #  roboshop
   
   catalogue:
     container_name: catalogue
-    image: catalogue:1
+    image: catalogue:v1
     depends_on:
     - mongodb
 
   web:
     container_name: web
-    image: web:1
+    image: web:v1
     ports:
     - "80:80"
     depends_on:
@@ -32,29 +32,27 @@ services:
     container_name: redis
     image: redis
      
-
-
   user:
     container_name: user
-    image: user:1
+    image: user:v1
     depends_on:
     - redis
     - mongodb
 
   cart:
     container_name: cart
-    image: cart:1
+    image: cart:v1
     depends_on:
     - redis
     - catalogue
 
   mysql:
     container_name: mysql
-    image: mysql:1
+    image: mysql:v1
 
   shipping:
     container_name: shipping
-    image: shipping:1
+    image: shipping:v1
     depends_on:
     - mysql
 
@@ -67,7 +65,7 @@ services:
 
   payment:
     container_name: payment
-    image: payment:1
+    image: payment:v1
     depends_on:
     - rabbitmq
     - user
