--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,23 +2,32 @@ networks:
   default:
     external: true
     name: roboshop
+volumes:
+    mongodb: #docker volume create mongodb
+    redis:
+    mysql:
+    rabbitmq:
 services:
 #docker run -d --name mongodb --network=roboshop mongodb:1
   mongodb:
-    container_name: mongodb
     image: mongodb:v1
+    container_name: mongodb
+    volumes:
+    - source: mongodb
+      target: /data/db
+      type: volume
     # networks:
       #  roboshop
   
   catalogue:
-    container_name: catalogue
     image: catalogue:v1
+    container_name: catalogue
     depends_on:
     - mongodb
 
   web:
-    container_name: web
     image: web:v1
+    container_name: web
     ports:
     - "80:80"
     depends_on:
@@ -31,6 +40,10 @@ services:
   redis:
     image: redis
     container_name: redis
+    volumes:
+    - source: redis
+      target: /data
+      type: volume
     
      
   user:
@@ -50,6 +63,10 @@ services:
   mysql:
     image: mysql:v1
     container_name: mysql
+    volumes:
+    - source: mysql
+      target: /var/lib/mysql
+      type: volume
     
 
   shipping:
@@ -64,6 +81,10 @@ services:
     environment:
     - RABBITMQ_DEFAULT_USER=roboshop
     - RABBITMQ_DEFAULT_PASS=roboshop123
+    volumes:
+    - source: rabbitmq
+      target: /var/lib/rabbitmq
+      type: volume
 
   payment:
     image: payment:v1
