--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:18
 EXPOSE 8080
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
+WORKDIR /opt/server
+ENV MONGO=true
+RUN chown roboshop:roboshop /opt/server
+USER roboshop
 WORKDIR /opt/server
 ENV MONGO=true
 COPY package.json /opt/server/
